--- a/sysdrv/source/kernel/.gitignore
+++ b/sysdrv/source/kernel/.gitignore
@@ -54,41 +54,41 @@ modules.order
 #
 # Top-level generic files
 #
-./*.img
-./out/
-./tags
-./TAGS
-./linux
-./modules-only.symvers
-./vmlinux
-./vmlinux.32
-./vmlinux.symvers
-./vmlinux-gdb.py
-./vmlinuz
-./System.map
-./Module.markers
-./modules.builtin.modinfo
-./modules.nsdeps
+/*.img
+/out/
+/tags
+/TAGS
+/linux
+/modules-only.symvers
+/vmlinux
+/vmlinux.32
+/vmlinux.symvers
+/vmlinux-gdb.py
+/vmlinuz
+/System.map
+/Module.markers
+/modules.builtin.modinfo
+/modules.nsdeps
 
 #
 # RPM spec file (make rpm-pkg)
 #
-./*.spec
+/*.spec
 
 #
 # Debian directory (make deb-pkg)
 #
-./debian/
+/debian/
 
 #
 # Snap directory (make snap-pkg)
 #
-./snap/
+/snap/
 
 #
 # tar directory (make tar*-pkg)
 #
-./tar-install/
+/tar-install/
 
 #
 # We don't want to ignore the following even if they are dot-files
@@ -103,10 +103,10 @@ modules.order
 #
 # Generated include files
 #
-./include/config/
-./include/generated/
-./include/ksym/
-./arch/*/include/generated/
+/include/config/
+/include/generated/
+/include/ksym/
+/arch/*/include/generated/
 
 # stgit generated dirs
 patches-*
@@ -142,21 +142,21 @@ signing_key.x509
 x509.genkey
 
 # Kconfig presets
-./all.config
-./alldef.config
-./allmod.config
-./allno.config
-./allrandom.config
-./allyes.config
+/all.config
+/alldef.config
+/allmod.config
+/allno.config
+/allrandom.config
+/allyes.config
 
 # Kconfig savedefconfig output
-./defconfig
+/defconfig
 
 # Kdevelop4
 *.kdev4
 
 # Clang's compilation database file
-./compile_commands.json
+/compile_commands.json
 
 # Documentation toolchain
 sphinx_*/
