--- a/sysdrv/.gitignore
+++ b/sysdrv/.gitignore
@@ -1,13 +1,14 @@
 *.o
-cfg
-drv_ko
+# cfg
+# drv_ko
 eudev-3.2.7
 kmod-29
 out
-source
+# source
 source/busybox
-source/kernel
-source/uboot
+# source/kernel
+/source/kernel/drv_ko
+# source/uboot
 tools/board/android-tools/android-tools/
 tools/board/dosfstools/dosfstools-4.2/
 tools/board/e2fsprogs/e2fsprogs*
@@ -16,9 +17,10 @@ tools/board/gdb/expat-2.4.1/
 tools/board/gdb/gdb-10.2/
 tools/board/idb_bootconfig/
 tools/board/memtester/memtester-4.3.0
-tools/board/mtd-utils/mtd-utils-*
+
+# tools/board/mtd-utils/mtd-utils-*
 tools/board/mtd-utils/out
-tools/board/security
+# tools/board/security
 tools/board/strace/strace-6.0
 tools/board/stressapptest/stressapptest-master
 tools/board/sysstat/sysstat-12.6.1/
@@ -26,4 +28,4 @@ tools/board/toolkits/openssl/openssl-1.1.1h/
 tools/board/toolkits/zlib/zlib-1.2.11/
 tools/board/valgrind/valgrind-*
 tools/pc/toolkits/resource_tool
-util-linux-2.37.2
+# util-linux-2.37.2
